# chat-service

./: .gitignore  Cargo.toml  chat-server.conf.toml  server_configuration.json  server_configuration.toml
backend/: Cargo.toml
backend/src/: config.rs  lib.rs  main.rs
backend/src/api/: echo.rs
bundle/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
bundle/pages/: second.html
bundle/src/selection/: selection.scss  selection.ts
chat-server/: Cargo.toml
chat-server/src/: config.rs  lib.rs  main.rs
chat-server/src/api/: echo.rs  mod.rs
chat-service/: Cargo.toml
chat-service/src/: lib.rs
chatroom/: Cargo.toml
chatroom/src/: lib.rs
common-js/: .gitignore  package.json  ready.ts
common-rs/: Cargo.toml
common-rs/src/: lib.rs  main.rs
frontend/: README.md  package.json
frontend/public/: index.html  render.tsx
frontend/src/: app.tsx
html/: package.json
server/: Cargo.toml
server/src/: config.rs  main.rs
site/public/: app.html
site/src/: types.ts
site/src/forms/: NewUser.tsx
static/: index.html  second.html
static/chat/: chat.css  chatter.js  index.html
templates/: login.html
