[workspace]
members = [
    "server",
    "chatroom",
]

resolver = "2"

[workspace.dependencies]
axum = "0.7"
tokio = {version = "1", features = ["full"]}
serde = {version = "1", features = ["derive"]}
tower = {version = "0.4", features = ["full"]}
tower-http = {version = "0.5", features = ["full"]}
http = "1"
