[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tower = { version = "0.4", features = ["full"] }
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
pretty_env_logger = "0.4"
