[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
chatroom = { version = "0.1.0", path = "../chatroom" }
chat-service = { version = "0.1.0", path = "../chat-service" }

axum = {workspace = true}
# tower = {version = "0.4", features = ["full"]}
tower-http = {workspace = true}

tokio = {workspace = true}

# hyper = {version = "1", features = ["tracing", "http1", "http2", "server"]}
# hyper-util = {version = "0.1", features = ["server-auto", "tokio"]}

# chrono = "0.4"

serde = {workspace = true}
# serde_json = "1"
toml = "0.8"

# log = "0.4"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt"]}
